2009/12/06 (TS):
 - bpmsim.c, bpmsim.h, hostStream.c, hostStream.h, padProto.c, padProto.h,
   padProtoHost.c, padStream.c, padStream.h, sddsrd.c, sddsrd.h,
   udpCommBSD.c, udpComm.h: Unbundled and removed. These are now part
   of EPICS modules 'udpComm.till'.
2009/12/05 (TS):
 - BUGFIX: padStreamStart() would call udpSockHdrsInit() with a socket arg
   of (-1). This is invalid since the socket arg is needed to find
   an interface structure from where the source IP and ethernet
   addresses can be loaded. Bogus IP and ethernet addresses were used!
   Thanks to the networking group - they reported seeing identical and bad
   MAC addresses.
   Added new udpSockHdrsInitFromIf() routine to be used by padStream
   (which for efficiency reasons does not use 'sockets').
 - Let udpSockHdrsSetlen() clear the UDP checksum (for sake of consistency
   since the routine also computes and sets the IP checksum).
 - Always use 'memcpy' to initialize IP checksum to zero before
   computing it (via assembly code). Hopefully this solves the
   alias problems...
2009/10/17 (TS):
 - drvAmdEthIpBasic.c: fixed typo. SEM_SMTX semphore type was removed;
   use SEM_MUTX (ordinary binary semaphore with priority inheritance)
   instead.
 - drvGnrEthIpBasic.c:
    o Replaced SEM_SMTX by SEM_MUTX (see above).
    o Driver now supports two tasks with different priorities (lower
      priority for link events and TX cleanup). This uses the new 
      low-level API of the 'beatnik' (and mvme3100) ethernet drivers.
    o Don't stop sending if link is down (loopback/debug mode may not
      have a valid link).
 - drvLan9118.c: Replaced SEM_SMTX by SEM_MUTX (see above).
 - e1k_lldrv.c:
    o Renaming some stuff.
    o Changed timing tuneup for lower latencies ('int_delay' variable
      default values.
    o Driver now implements new API allowing the higher level driver
      to use different tasks for RX and less important TX/Link work.
 - gnreth_lldrv.h, mve_lldrv.h: